# rust_commerce

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  FLY_DEPLOYMENT_GUIDE.md  FLY_NATS_TROUBLESHOOTING.md  INTEGRATION_TESTING_PLAN.md  LOGGING_IMPROVEMENT_PLAN.md  NATS_ENVIRONMENT_CONFIGURATION.md  PHASE_2_COMPLETE.md  PROTO_API_ARCHITECTURE.md  README.md  cargo.toml  debug_dns.sh  deploy-fly.sh  docker-compose.test.yml  docker-compose.yml  docker-stack.sh  get-fly-ips.sh  init-mongo.js
catalog/: .dockerignore  .env  .env.local  .env.production  CATEGORY_HIERARCHY_IMPLEMENTATION_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.new  PATH_FORMAT_FIX_SUMMARY.md  README.md  TREE_CACHE_BEHAVIOR.md  build.rs  fly.toml  sample_categories_import.json  test_export.sh  test_products.json
catalog/data/: categories_import.json  sample_categories_import.json  test_products.json
catalog/docs/: CATEGORY_GET_TREE_IMPLEMENTATION.md  EXPORT_README.md  HIERARCHICAL_IMPORT_SUMMARY.md  PHASE_1_2_COMPLETION_SUMMARY.md  hierarchical_import_tests
catalog/mongodb/: category_indexes.js  playground-1.mongodb.js
catalog/proto/: catalog.proto  category.proto  events.proto  product.proto
catalog/sample_records/: db_catalog.categories.json  db_catalog.category_tree_cache.json  db_catalog.products.json  final_categories_export.json  products.json  products_consolidated_v4.json  products_export_full.json  products_subset.json  sample_product_mongo_record.json
catalog/sample_records_backup/: products.json  sample_product_mongo_record.json
catalog/scripts/: catalog-docker.sh
catalog/src/: env_config.rs  lib.rs  logging_utils.rs
catalog/src/catalog-client/: main.rs
catalog/src/catalog-service/: main.rs  mod.rs  model.rs  model_tests.rs  startup.rs  validation.rs
catalog/src/catalog-service/domain/: mod.rs  model.rs  product_name.rs  product_ref.rs
catalog/src/catalog-service/handlers/: category_handlers.rs  category_service.rs  handlers_inner.rs  mod.rs  product_handlers.rs
catalog/src/catalog-service/persistence/: category_dao.rs  mod.rs  product_dao.rs
catalog/src/catalog-service/services/: category_service.rs  product_service.rs
catalog/tests/: category_tests.rs  hierarchical_import_tests.rs  mod.rs  path_format_tests.rs  performance_tests.rs  product_slug_integration_tests.rs  tree_cache_integration_tests.rs  tree_cache_tests.rs
catalog/tests/api/: category_tests.rs  main.rs  product_tests.rs
catalog/tests/api/helpers/: mod.rs  once_cell_app.rs  shared_app.rs  spawn_app.rs  test_service.rs  test_setup.rs
catalog/tests/commands/: category_tests.rs  mod.rs  product_tests.rs
catalog/tests/helpers/: mod.rs
catalog/tests_original/: api_integration_tests.rs  category_tests.rs  product_slug_integration_tests.rs  tree_cache_tests.rs
orders/: .dockerignore  .env.local  Cargo.toml  Dockerfile  build.rs  fly.toml  vtex.order.json
orders/proto/: address.proto  attributes.proto  code.proto  item.proto  orders.proto  ordertotals.proto  price.proto  status.proto
orders/scripts/: orders-docker.sh
orders/src/order-client/: main.rs
orders/src/order-service/: main.rs  model.rs  validation.rs
orders/src/order-service/handlers/: mod.rs  (+1 more)
price/: .dockerignore  .env.local  Cargo.toml  DATABASE_OPTIMIZATION_SUMMARY.md  Dockerfile  MULTI_SKU_IMPLEMENTATION_COMPLETE.md  build.rs  fly.toml  test_currency.rs  tmp-logs.txt
price/co-pilot-dev-plans/: DEVELOPMENT_SUMMARY.md  GET_BEST_OFFER_PRICE_CLIENT_COMMAND.md  PHASE_2_COMPLETION_STATUS.md  PHASE_4_TESTCONTAINERS_SUBPLAN.md  STEP_4_1_RESEARCH_RESULTS.md  STEP_4_2_STATUS_UPDATE.md  TESTCONTAINERS_CLEANUP_SUMMARY.md  find a good example of using rustcontainers integr.md  get-best-offer-price-implementation.md
price/proto/: offer.proto
price/sample_records/: db_prices_full.json
price/scripts/: price-docker.sh
price/src/: lib.rs
price/src/price-client/: main.rs
price/src/price-service/: main.rs  model.rs  validation.rs
price/tests/: get_best_offer_price_unit_tests.rs  get_best_offer_prices_integration_tests.rs  simple_test.rs
rust-common/: Cargo.toml
rust-common/src/: env_config.rs  lib.rs  logging_utils.rs
rust-common/src/test_helpers/: fixtures.rs  mod.rs  test_app.rs
(+79 files in other folders)
