[package]
name = "rust-price"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_price"
path = "src/lib.rs"

[[bin]]
name = "price-service"
path = "src/price-service/main.rs"

[[bin]]
name = "price-client"
path = "src/price-client/main.rs"

[dependencies]
cargo-watch = "8.5.2"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.82"
mongodb = "3.1.0"
uuid = "1.10.0"
bson = { version = "2.11.0", features = ["chrono-0_4", "uuid-1"] }
thiserror = "2.0.12"
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
iso_currency = { version = "0.5.0", features = ["with-serde"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
async-nats = { version = "0.42.0", features = ["service"] }
rust-common = { path = "../rust-common" }
clap = { version = "4.5.17", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] } 
futures = "0.3.30"
bytes = "1.7.1"
prost = { version = "0.14.1", features = ["derive"] }
prost-types = "0.14.1"


[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
futures = "0.3.30"
