[package]
name = "rust-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Environment configuration
dotenvy = "0.15"

# Logging
log = "0.4"
pretty_env_logger = "0.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database dependencies
mongodb = "3.1.0"
async-nats = { version = "0.42.0", features = ["service"] }

# Error handling
anyhow = "1.0"

# Test dependencies (also needed in regular dependencies for test helpers)
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
bson = "2.11"
prost = "0.14"
